# business-infinity

./: .gitmodules  README.md  azure.yaml  function_app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: agent-evolution-agent.agent.md  spec-manager.agent.md
.github/docs/: README.md  TEMPLATE-EXTRACTION-GUIDE.md  agent-communication.md  agent-contribution-guide.md  agent-intelligence-framework.md  agent-metrics.md  agent-onboarding.md  agent-philosophy.md  agent-quick-reference.md  agent-system-overview.md  agent-workflows.md  conventional-tools.md  decision-matrices.md  dogfooding-guide.md  future-roadmap.md  path-specific-instructions.md  spec-driven.md
.github/instructions/: azure-functions.instructions.md  github-specs.instructions.md  python.instructions.md  spec-driven-workflow.instructions.md
.github/prompts/: repository-onboarding.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.github/specs/: README.md  agent-intelligence-framework.md  boardroom-agents.md  boardroom-entities.md  mvp.md  spec-driven-development.md
.github/templates/: Readme.md  data-model.md  plan.md  research.md  spec.md  tasks.md
.github/workflows/: README.md  deploy.yml  verify-azure-endpoints.yml
boardroom/: state.json
boardroom/mind/: Readme.md
boardroom/state/: CMO.json  CTO.json  Company.json  Readme.md  boardroom.json  business-Infinity.json  business-infinity.jsonld  ceo.jsonld  cfo.jsonld  chro.jsonld  cmo.json  cmo.jsonld  company.jsonld  coo.jsonld  cso.jsonl  (+4 more)
business_infinity/: __init__.py  _paths.py  additional_blueprints.py  app_instance.py  boardroom_debate.py  workflow_definitions.py  workflow_orchestration.py  workflows.py
docs/: multi-repository-implementation.md  philosophy.md
src/: function_app.py
tests/: test_function_app.py  test_planner.py  test_seo.py  test_workflows.py
website/: lint-scss-mixins.js  playwright.config.js
(+207 files in other folders)
