[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "business-infinity"
version = "4.0.0"
description = "Lean Azure Functions client app powered by the Agent Operating System — orchestration managed internally by Foundry Agent Service"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "aos-client-sdk[azure]>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ASISaga/business-infinity"
Documentation = "https://github.com/ASISaga/business-infinity/tree/main/docs"
Repository = "https://github.com/ASISaga/business-infinity"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
